# PassmanTRS

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
archbuild/: PKGBUILD
src/: AddPw.svelte  App.svelte  ChangeMasterPw.svelte  EditPw.svelte  Home.svelte  View.svelte  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  passwords.txt  tauri.conf.json
src-tauri/src/: main.rs
src/components/: LanguageSelector.svelte  PasswordStrengthMeter.svelte  SearchBar.svelte  SettingsDialog.svelte
src/locales/: de.json  en.json  i18n.ts
src/pages/: About.svelte  AddPw.svelte  ChangeMasterPw.svelte  EditPw.svelte  GeneratePw.svelte  Home.svelte  View.svelte
src/utils/: generator.ts  stores.ts  types.ts  utilities.ts  utillities.ts
