[package]
name = "passwordmanager"
version = "0.1.6"
description = "Password Manager made with Rust and Tauri"
authors = ["gamersi"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [
    "system-tray",
    "dialog-all",
    "shell-open",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
bcrypt = "0.15.1"
ring = "0.17.12"
aes-gcm = "0.10.3"
rand = "0.8.5"
chrono = "0.4.38"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
